[tool.poetry]
name = "winds-mobi-admin"
description = "Django application to manage winds.mobi users and profiles."
version = "0.0.0"
authors = ["winds.mobi"]
license = "	AGPL-3.0-only"
packages = [
    { include = "winds_mobi_admin" },
    { include = "winds_mobi_user" },
    { include = "winds_mobi_zermatt" },
]

[tool.poetry.dependencies]
python = "3.9.*"
dj-database-url = "1.0.0"
django = "4.2.22"
django-cors-headers = "3.13.0"
django-import-export = "3.1.0"
djangorestframework = "3.13.1"
google-auth = "2.10.0"
google-auth-oauthlib = "0.5.2"
gunicorn = "23.0.0"
psycopg2 = "2.9.3"
pyjwt = "2.4.0"
redis = "4.6.0"
sentry-sdk = "1.17.0"
whitenoise = "6.2.0"

[tool.poetry.group.dev.dependencies]
black = "22.6.0"
flake8 = "5.0.4"
isort = "5.12.0"
pytest = "7.1.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
force-exclude  = '''
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["**/migrations"]
